dark mode fix

--- a/css/about.css
+++ b/css/about.css
@@ -2,8 +2,8 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1e1e2e;
-    color: #ffffff;
+    background-color: var(--body-bg);
+    color: var(--main-text-color);
 }
 
 .container {
@@ -19,7 +19,9 @@ body {
 }
 
 .section {
-    background: #333547;
+    background: var(--glass-bg);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 20px;
     margin-top: 20px;
     border-radius: 8px;
@@ -29,7 +31,7 @@ body {
 
 h1,
 h2 {
-    color: rgb(0, 123, 255);
+    color: var(--primary-text-color);
 }
 
 ul {
@@ -89,7 +91,7 @@ ul li {
 
 .member a {
     text-decoration: none;
-    color: white;
+    color: var(--main-text-color);
 }
 
 .member h3 {
